# company-helper-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml  manual-deploy.yml
src/: main.rs
