[package]
name = "company-helper-bot"
version = "0.1.0"
authors = ["nolik"]
edition = "2018"

[dependencies]
teloxide = { version = "0.5.3", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }
